# study

./: .gitignore  README.md
browser-use/: README.md  main.py
django-benchmark/: Dockerfile  ab.md  compose.yml  gevent-17worker.md  gevent-1worker.md  gthread-17threads.md  gthread-17worker-17threads.md
django-benchmark/src/: entrypoint.sh  out.stacks  pyproject.toml
django-benchmark/src/app/: urls.py  views.py
django-benchmark/src/common/: asgi.py  settings.py  urls.py  wsgi.py
try-and-understand-linux-system/: README.md
try-and-understand-linux-system/chapter2/: README.md  loop.c
try-and-understand-linux-system/chapter3/: fork-and-exec.c
try-and-understand-linux-system/chapter4/: README.md  sched.c
try-and-understand-linux-system/memory/: README.md  mmap.c  segv.c
try-and-understand-linux-system/process/: fork.c
try-and-understand-linux-system/syscall/: ppidloop.c
